opam-version: "2.0"
name: "satysfi-csv-doc"
version: "1.0.0"
synopsis: "Document of satysfi-csv"
description: """
Document of satysfi-csv.
"""
maintainer: "Naoki Kaneko <puripuri2100@gmail.com>"
authors: "Naoki Kaneko <puripuri2100@gmail.com>"
license: "MIT"
homepage: "https://github.com/puripuri2100/satysfi-csv"
dev-repo: "git+https://github.com/puripuri2100/satysfi-csv.git"
bug-reports: "https://github.com/puripuri2100/satysfi-csv/issues"
depends: [
  "satysfi" { >= "0.0.5" & < "0.0.7" }
  "satyrographos" { >= "0.0.2.6" & < "0.0.3" }

  "satysfi-csv" {= "%{version}%"}

  "satysfi-dist"
  "satysfi-base" { >= "1.4.0" & < "2.0.0" }
  "satysfi-debug-show-value" { >= "0.1.2" & < "0.2.0" }
]
build: [
  ["satyrographos" "opam" "build"
   "--name" "csv-doc"
   "--prefix" "%{prefix}%"
   "--script" "%{build}%/Satyristes"]
]
install: [
  ["satyrographos" "opam" "install"
   "--name" "csv-doc"
   "--prefix" "%{prefix}%"
   "--script" "%{build}%/Satyristes"]
]
