opam-version: "2.0"
name: "satysfi-csv"
version: "1.0.0"
synopsis: "A CSV reader and writer for SATySFi"
description: """
A CSV reader and writer for SATySFi.
"""
maintainer: "Naoki Kaneko <puripuri2100@gmail.com>"
authors: "Naoki Kaneko <puripuri2100@gmail.com>"
license: "MIT"
homepage: "https://github.com/puripuri2100/satysfi-csv"
dev-repo: "git+https://github.com/puripuri2100/satysfi-csv.git"
bug-reports: "https://github.com/puripuri2100/satysfi-csv/issues"
depends: [
  "satysfi" { >= "0.0.5" & < "0.0.7" }
  "satyrographos" { >= "0.0.2.6" & < "0.0.3" }

  "satysfi-dist"
  "satysfi-base" { >= "1.4.0" && < "2.0.0"}
]
build: [
  ["satyrographos" "opam" "build"
   "--name" "csv"
   "--prefix" "%{prefix}%"
   "--script" "%{build}%/Satyristes"]
]
install: [
  ["satyrographos" "opam" "install"
   "--name" "csv"
   "--prefix" "%{prefix}%"
   "--script" "%{build}%/Satyristes"]
]
